--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "wil-backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
+  "name": "wilbackend",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "node index.js"
+    "start": "node ./bin/www"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.4",
-    "express": "^4.21.0"
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "~1.9.1",
+    "pg": "^8.12.0"
   }
 }
